--- a/contact.html
+++ b/contact.html
@@ -122,20 +122,27 @@
           </div>
           <div class="col-lg-4">
             <div class="p-4 bg-white mb-3 rounded">
-              <span class="d-block text-black h6 text-uppercase">New York</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <span class="d-block text-black h6 text-uppercase">
+                <a href="https://www.google.com/maps/search/?api=1&query=18%2C%20rue%20de%20zone%20industrielle%20route%20de%20la%20gare%2C%20Houch%20Mahi%C3%A9ddine%2C%20Reghaia%20-%20Alger%2016000%2C%20Algerie.." target="_blank">BIOPHARM LOGISTIC</a>
+              </span>
+              <p class="mb-0">Toutes opérations immobilières, achat, vente, construction, promotion, gestion de la logistique.Reghaia, Alger, Algérie
+                </p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="p-4 bg-white mb-3 rounded">
-              <span class="d-block text-black h6 text-uppercase">London</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <span class="d-block text-black h6 text-uppercase">
+                <a href="https://www.google.com/maps/dir//Biopharm+P664%2BJCR+ZI+Oued+Smar/@36.711581,3.1236078,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x128e51ba2b773055:0xa6cebc6adf13b735!2m2!1d3.2060096!2d36.7116094?entry=ttu&g_ep=EgoyMDI1MDMwOC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" target="_blank">BIOPHARM SPA</a>
+              </span>
+              <p class="mb-0">Fabrication des produits pharmaceutiques. Alger, Algérie</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="p-4 bg-white mb-3 rounded">
-              <span class="d-block text-black h6 text-uppercase">Canada</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <span class="d-block text-black h6 text-uppercase">
+                <a href="https://www.google.com/maps/dir//BIOPUREspa+GV63%2B4XC+Ouled+Ya%C3%AFch+09100/@36.5103109,2.854892,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x128f0be09455488b:0x612e1579271b03b7!2m2!1d2.854892!2d36.5103109?entry=ttu&g_ep=EgoyMDI1MDMwOC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" target="_blank">BIOPURE</a>
+              </span>
+              <p class="mb-0"> Distribution aux officines des produits pharmaceutiques. Yaich, Blida 16000, Algérie</p>
             </div>
           </div>
         </div>
@@ -147,21 +154,20 @@
     <footer class="site-footer">
       <div class="container">
         <div class="row">
+          
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-
-            <div class="block-7">
+            <di class="block-7">
               <h3 class="footer-heading mb-4">À propos de nous</h3>
               <p>Biopharm, fondé en 1991, est un groupe pharmaceutique algérien détenant 13 % du marché et exportant en Afrique. Il fabrique 130 produits et est certifié aux normes européennes.</p>
-            </div>
-
+            
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Suppléments</a></li>
-              <li><a href="#">Vitamines</a></li>
-              <li><a href="#">Régime &amp; Nutrition</a></li>
-              <li><a href="#">Thé &amp; Café</a></li>
+              <li><a href="https://www.facebook.com/laboratoiresbiopharm" target="_blank">Facebook</a></li>
+              <li><a href="https://www.instagram.com/leslaboratoiresbiopharm/" target="_blank">Instagram</a></li>
+              <li><a href="https://dz.linkedin.com/company/biopharmdz" target="_blank">LinkedIn</a></li>
+              <li><a href="https://www.youtube.com/@laboratoiresbiopharm1348" target="_blank">YouTube</a></li>
             </ul>
           </div>
 
@@ -169,27 +175,16 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
-                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
-                <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
-                <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
+                <li class="address"><a href="https://www.google.com/maps/search/?api=1&query=18%2C%20rue%20de%20zone%20industrielle%20route%20de%20la%20gare%2C%20Houch%20Mahiéddine%2C%20Reghaia%20-%20Alger%2016000%2C%20Algerie.." target="_blank">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
+                <!-- Modified phone link -->
+                <li class="phone"><a href="tel:0238510109">023 85 10 109</a></li>
+                <!-- Modified email link -->
+                <li class="email"><a href="mailto:pharmavie@gmail.com">contact@biopharm.dz</a></li>
               </ul>
             </div>
 
 
           </div>
-        </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script>
-              avec <i class="icon-heart" aria-hidden="true"></i> par <a href="https://www.who.int/fr" target="_blank"
-                class="text-primary">organisation mondiale de la santé</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-
         </div>
       </div>
     </footer>
