--- a/shop.html
+++ b/shop.html
@@ -246,9 +246,8 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_2.jpg');"></a>
               <div class="banner-1-inner ml-auto  align-self-center">
-                <h2>Évalué par des experts</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
-                </p>
+                <h2>"Contrôle qualité par des experts"</h2>
+                <p> "Nos produits sont rigoureusement testés et fabriqués selon les normes les plus strictes pour garantir votre sécurité et efficacité." </p>
               </div>
             </a>
           </div>
@@ -271,9 +270,10 @@
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li class="address">< href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</li>
-              <li class="phone"><a href="tel://2135572195"> 023 85 10 109</li>
-              <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
+              <li><a href="https://www.facebook.com/laboratoiresbiopharm" target="_blank">Facebook</a></li>
+              <li><a href="https://www.instagram.com/leslaboratoiresbiopharm/" target="_blank">Instagram</a></li>
+              <li><a href="https://dz.linkedin.com/company/biopharmdz" target="_blank">LinkedIn</a></li>
+              <li><a href="https://www.youtube.com/@laboratoiresbiopharm1348" target="_blank">YouTube</a></li>
             </ul>
           </div>
 
@@ -282,27 +282,14 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
-                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</li>
-                <li class="phone"><a href="tel://2135572195"> 023 85 10 109</li>
-                <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
+                <li class="address"><a href="https://www.google.com/maps/search/?api=1&query=18%2C%20rue%20de%20zone%20industrielle%20route%20de%20la%20gare%2C%20Houch%20Mahiéddine%2C%20Reghaia%20-%20Alger%2016000%2C%20Algerie.." target="_blank">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
+                <li class="phone"><a href="tel:0238510109">023 85 10 109</a></li>
+                <li class="email"><a href="mailto:pharmavie@gmail.com">contact@biopharm.dz</a></li>
               </ul>
             </div>
 
 
           </div>
-        </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script>
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.who.int/fr" target="_blank"
-                class="text-primary">organisation mondiale de la santé</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-
         </div>
       </div>
     </footer>
