--- a/thankyou.html
+++ b/thankyou.html
@@ -81,10 +81,10 @@
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Suppléments</a></li>
-              <li><a href="#">Vitamines</a></li>
-              <li><a href="#">Régime &amp; Nutrition</a></li>
-              <li><a href="#">Thé &amp; Café</a></li>
+              <li><a href="https://www.facebook.com/laboratoiresbiopharm" target="_blank">Facebook</a></li>
+              <li><a href="https://www.instagram.com/leslaboratoiresbiopharm/" target="_blank">Instagram</a></li>
+              <li><a href="https://dz.linkedin.com/company/biopharmdz" target="_blank">LinkedIn</a></li>
+              <li><a href="https://www.youtube.com/@laboratoiresbiopharm1348" target="_blank">YouTube</a></li>
             </ul>
           </div>
 
@@ -92,14 +92,11 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Informations de contact</h3>
               <ul class="list-unstyled">
-                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
-                <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
-                <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
-              </ul>s
+                <li class="address"><a href="https://www.google.com/maps/search/?api=1&query=18%2C%20rue%20de%20zone%20industrielle%20route%20de%20la%20gare%2C%20Houch%20Mahiéddine%2C%20Reghaia%20-%20Alger%2016000%2C%20Algerie.." target="_blank">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
+                <li class="phone"><a href="tel:0238510109">023 85 10 109</a></li>
+                <li class="email"><a href="mailto:pharmavie@gmail.com">contact@biopharm.dz</a></li>
               </ul>
             </div>
-
-
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
