--- a/about.html
+++ b/about.html
@@ -127,8 +127,9 @@
             </div>
             <div class="text">
               <h2>Livraison Gratuite</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-                tincidunt fringilla.</p>
+              <p>"Nous assurons une livraison rapide et gratuite pour vous garantir un accès facile et sécurisé à nos produits pharmaceutiques."
+
+              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
@@ -137,8 +138,7 @@
             </div>
             <div class="text">
               <h2>Retours Gratuits</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-                tincidunt fringilla.</p>
+              <p>"Votre satisfaction est notre priorité. Bénéficiez de retours gratuits sur nos produits dans le respect des normes de sécurité."</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
@@ -147,8 +147,7 @@
             </div>
             <div class="text">
               <h2>Assistance Client</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-                tincidunt fringilla.</p>
+              <p>"Nos experts sont à votre écoute pour répondre à vos questions et vous accompagner. Contactez-nous pour une assistance personnalisée."</p>
             </div>
           </div>
         </div>
@@ -244,10 +243,10 @@
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Liens Rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Suppléments</a></li>
-              <li><a href="#">Vitamines</a></li>
-              <li><a href="#">Régime &amp; Nutrition</a></li>
-              <li><a href="#">Thé &amp; Café</a></li>
+              <li><a href="https://www.facebook.com/laboratoiresbiopharm" target="_blank">Facebook</a></li>
+              <li><a href="https://www.instagram.com/leslaboratoiresbiopharm/" target="_blank">Instagram</a></li>
+              <li><a href="https://dz.linkedin.com/company/biopharmdz" target="_blank">LinkedIn</a></li>
+              <li><a href="https://www.youtube.com/@laboratoiresbiopharm1348" target="_blank">YouTube</a></li>
             </ul>
           </div>
 
@@ -255,27 +254,14 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
-                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
-                <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
-                <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
+                <li class="address"><a href="https://www.google.com/maps/search/?api=1&query=18%2C%20rue%20de%20zone%20industrielle%20route%20de%20la%20gare%2C%20Houch%20Mahiéddine%2C%20Reghaia%20-%20Alger%2016000%2C%20Algerie.." target="_blank">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
+                <li class="phone"><a href="tel:0238510109">023 85 10 109</a></li>
+                <li class="email"><a href="mailto:pharmavie@gmail.com">contact@biopharm.dz</a></li>
               </ul>
             </div>
 
 
           </div>
-        </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script>
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.who.int/fr" target="_blank"
-                class="text-primary">organisation mondiale de la santé</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-
         </div>
       </div>
     </footer>
