Convert the existing form to support file uploads

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
             </div>
             <div class="text">
               <h2>Livraison Gratuite</h2>
-              <p>"Nous assurons une livraison rapide et gratuite pour vous garantir un accès facile et sécurisé à nos produits pharmaceutiques."
+              <p>"Nous assurons une command rapide et gratuite pour vous garantir un accès facile et sécurisé à nos produits pharmaceutiques."
 
               </p>
             </div>
