--- a/shared/header.html
+++ b/shared/header.html
@@ -1,4 +1,4 @@
-<div class="site-navbar py-2" style="background-color: rgb(0, 195, 255);">
+<div class="site-navbar py-2" style="background-color: #00c3ff;">
   <div class="search-wrap">
     <div class="container">
       <a href="#" class="search-close js-search-close"><span class="icon-close2"></span></a>
@@ -45,7 +45,6 @@
         </a>
         <div id="auth-buttons" class="d-inline-block ml-3">
           <a href="login.html" class="btn btn-sm auth-btn login-btn">Connexion</a>
-          <a href="signup.html" class="btn btn-sm auth-btn signup-btn">Inscription</a>
         </div>
         <a href="#" class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span class="icon-menu"></span></a>
       </div>
@@ -78,7 +77,7 @@
 .signup-btn {
   background-color: #fff;
   border: 2px solid #fff;
-  color: rgb(0, 195, 255);
+  color: #00c3ff;
   margin-left: 0.5rem;
 }
 
@@ -138,7 +137,6 @@
       } else {
         authButtons.innerHTML = `
           <a href="login.html" class="btn btn-sm auth-btn login-btn">Connexion</a>
-          <a href="signup.html" class="btn btn-sm auth-btn signup-btn">Inscription</a>
         `;
       }
     }
