--- a/thankyou.html
+++ b/thankyou.html
@@ -60,13 +60,12 @@
             <span class="icon-check_circle display-3 text-success"></span>
             <h2 class="display-3 text-black">Merci !</h2>
             <p class="lead mb-5">Votre commande a été effectuée avec succès.</p>
-            <p><a href="shop.html" class="btn btn-md height-auto px-4 py-3 btn-primary">Retour à la boutique</a></p>
+            <p><a href="shop.html" class="btn btn-md height-auto px-4 py-3 btn-primary">Retour à le magasin</a></p>
           </div>
         </div>
       </div>
     </div>
-
-
+ 
     <footer class="site-footer">
       <div class="container">
         <div class="row">
@@ -102,7 +101,4 @@
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script>
-              avec <i class="icon-heart
+             
