--- a/cart.html
+++ b/cart.html
@@ -106,7 +106,7 @@
     
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='thankyou.html'">Passer à la caisse</button>
+                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='thankyou.html'">Passer à la commande</button>
                   </div>
                 </div>
               </div>
