regler le panier

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <div class="block-16">
               <figure>
                 <img src="images/bg_1.jpg" alt="Image placeholder" class="img-fluid rounded">
-                <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span
+                <a href="https://www.bing.com/videos/riverview/relatedvideo?pglt=425&q=video+biopharm+youtube&cvid=66ac93e376a147969808f4a2b2dd8cf0&gs_lcrp=EgRlZGdlKgYIABBFGDkyBggAEEUYOdIBCDg1ODNqMGoxqAIAsAIA&ucpdpc=UCPD&PC=WSEDDB&ru=%2fsearch%3fpglt%3d425%26q%3dvideo%2bbiopharm%2byoutube%26cvid%3d66ac93e376a147969808f4a2b2dd8cf0%26gs_lcrp%3dEgRlZGdlKgYIABBFGDkyBggAEEUYOdIBCDg1ODNqMGoxqAIAsAIA%26FORM%3dANNTA1%26ucpdpc%3dUCPD%26PC%3dWSEDDB&mmscn=vwrc&mid=B85F1786DA85FB51E0BAB85F1786DA85FB51E0BA&FORM=WRVORC" class="play-button popup-vimeo"><span
                     class="icon-play"></span></a>
     
               </figure>
@@ -95,9 +95,8 @@
             <div class="block-16">
               <figure>
                 <img src="images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded">
-                <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span
+                <a href="https://www.youtube.com/watch?v=Rwhsi-gnuZM" class="play-button popup-vimeo"><span
                     class="icon-play"></span></a>
-    
               </figure>
             </div>
           </div>
