--- a/shared/header.html
+++ b/shared/header.html
@@ -12,7 +12,9 @@
     <div class="d-flex align-items-center justify-content-between">
       <div class="logo">
         <div class="site-logo">
-          <a href="index.html" class="js-logo-clone">Biopharm</a>
+          <a href="index.html" class="js-logo-clone">
+            <img src="../images/Biopharm_logo.png" alt="Biopharm" style="height: 50px; width: auto;">
+          </a>
         </div>
       </div>
       <div class="main-nav d-none d-lg-block">
@@ -23,6 +25,7 @@
             <li class="has-children">
               <a href="#">Catégories</a>
               <ul class="dropdown">
+                
                 <li><a href="shop.html?category=Cardiovasculaire%20et%20métabolisme">Cardiovasculaire et métabolisme</a></li>
                 <li><a href="shop.html?category=Dermatologie">Dermatologie</a></li>
                 <li><a href="shop.html?category=Diabétologie">Diabétologie</a></li>
@@ -30,6 +33,7 @@
                 <li><a href="shop.html?category=Pneumo-allergologie">Pneumo-allergologie</a></li>
                 <li><a href="shop.html?category=Psychiatrie">Psychiatrie</a></li>
                 <li><a href="shop.html?category=Rhumatologie">Rhumatologie</a></li>
+             
               </ul>
             </li>
             <li><a href="about.html">À propos</a></li>
@@ -53,6 +57,17 @@
 </div>
 
 <style>
+.site-logo {
+  display: flex;
+  align-items: center;
+}
+
+.site-logo a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
 .auth-btn {
   padding: 0.375rem 1rem;
   border-radius: 20px;
