--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup - Biopharm</title>
+    <title>Mot de passe oublié - Biopharm</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,16 +34,12 @@
             margin-top: 10px;
             font-weight: bold;
         }
-        input, select, textarea {
+        input {
             width: 100%;
             padding: 0.75rem;
             margin: 0.5rem 0;
             border: 1px solid #ccc;
             border-radius: 5px;
-        }
-        textarea {
-            height: 60px;
-            resize: none;
         }
         button {
             background-color: #3498db;
@@ -64,29 +60,28 @@
 <body>
     <div class="login-container">
         <h1><img src="images/Biopharm_logo.png" alt="Biopharm" style="height: 50px;"></h1>
-        <h2>Connexion </h2>
-        <form action="/login" method="POST">
+        <h2>Mot de passe oublié</h2>
+        <form id="forgotPasswordForm">
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your email" required>
+                <label for="emailOrPhone">Email ou numéro de téléphone</label>
+                <input type="text" id="emailOrPhone" name="emailOrPhone" placeholder="Entrez votre email ou téléphone" required>
             </div>
 
-            <div class="form-group">
-                <label for="password">mot de passe</label>
-                <input type="password" id="password" name="password" placeholder="Your password" required>
-            </div>
-
-            <div class="form-group" style="text-align: left; margin-top: 10px;">
-                <input type="checkbox" id="remember" name="remember" style="width: auto; margin-right: 5px;">
-                <label for="remember" style="display: inline;">Se souvenir de moi</label>
-            </div>
-
-            <button type="submit">Se connecter</button>
+            <button type="submit">Réinitialiser le mot de passe</button>
             
             <div style="text-align: center; margin-top: 10px;">
-                <a href="forgot-password.html" style="color: #3498db; text-decoration: none;">Mot de passe oublié ?</a>
+                <a href="login.html" style="color: #3498db; text-decoration: none;">Retour à la connexion</a>
             </div>
         </form>
     </div>
+
+    <script>
+        document.getElementById('forgotPasswordForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const emailOrPhone = document.getElementById('emailOrPhone').value;
+            // Add your password reset logic here
+            alert('Un lien de réinitialisation a été envoyé si le compte existe.');
+        });
+    </script>
 </body>
 </html>
